--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/bootstrap"]
 	path = lib/bootstrap
 	url = https://github.com/twbs/bootstrap
+[submodule "lib/mp3-piano-sound"]
+	path = lib/mp3-piano-sound
+	url = https://github.com/pffy/mp3-piano-sound
